RESOLVED FIXED188122
[WK1] ASSERTION FAILED: renderer().repaintLayoutRects().m_repaintRect == renderer().clippedOverflowRectForRepaint(renderer().containerForRepaint()) in WebCore::RenderLayer::updateLayerPositionsAfterScroll
https://bugs.webkit.org/show_bug.cgi?id=188122
Summary [WK1] ASSERTION FAILED: renderer().repaintLayoutRects().m_repaintRect == rend...
alan
Reported 2018-07-27 13:16:26 PDT
Attachments
Patch (6.04 KB, patch)
2018-07-27 13:46 PDT, alan
no flags
Patch (6.50 KB, patch)
2018-07-27 14:42 PDT, alan
no flags
alan
Comment 1 2018-07-27 13:46:27 PDT
Simon Fraser (smfr)
Comment 2 2018-07-27 13:52:18 PDT
Comment on attachment 345949 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=345949&action=review > Source/WebCore/ChangeLog:9 > + We can't reliably tell if repaint rects need to be recomputed when FrameView's m_paintsEntireContents flag flips due to layer backing changes. Maybe expand this comment a bit.
alan
Comment 3 2018-07-27 14:42:02 PDT
WebKit Commit Bot
Comment 4 2018-07-27 15:11:39 PDT
Comment on attachment 345956 [details] Patch Clearing flags on attachment: 345956 Committed r234329: <https://trac.webkit.org/changeset/234329>
WebKit Commit Bot
Comment 5 2018-07-27 15:11:41 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-07-27 15:12:33 PDT
Note You need to log in before you can comment on or make changes to this bug.